# QuasarEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dependencies.lua  LICENSE  README.md  SPIR-V_Build_Shader.bat  Win-GenProjects.bat  Win_ClearFiles.bat  Win_Lines.bat  Win_Lines_Local.bat  Win_Setup.bat  dependencies.lua  premake5.lua  win_setup.bat
QuasarEngine-Core/: CMakeLists.txt  premake5.lua
QuasarEngine-Core/src/: QuasarEngine.h  qepch.cpp  qepch.h
QuasarEngine-Core/src/Platform/DirectX/: DirectXBasicSkybox.cpp  DirectXBasicSkybox.h  DirectXBuffer.cpp  DirectXBuffer.h  DirectXContext.cpp  DirectXContext.h  DirectXFramebuffer.cpp  DirectXFramebuffer.h  DirectXImGuiLayer.cpp  DirectXImGuiLayer.h  DirectXRenderer.cpp  DirectXRendererAPI.cpp  DirectXRendererAPI.h  DirectXShader.cpp  DirectXShader.h  DirectXTexture2D.cpp  DirectXTexture2D.h  DirectXTextureArray.cpp  DirectXTextureArray.h  DirectXTextureCubeMap.cpp  DirectXTextureCubeMap.h  DirectXVertexArray.cpp  DirectXVertexArray.h
QuasarEngine-Core/src/Platform/OpenGL/: OpenGLBasicSkybox.cpp  OpenGLBasicSkybox.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  OpenGLRenderer.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLTexture2DView.cpp  OpenGLTexture2DView.h  OpenGLTextureArray.cpp  OpenGLTextureArray.h  OpenGLTextureArrayView.cpp  OpenGLTextureArrayView.h  OpenGLTextureCubeMap.cpp  OpenGLTextureCubeMap.h  OpenGLTextureCubeMapView.cpp  OpenGLTextureCubeMapView.h  OpenGLTextureUtils.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
QuasarEngine-Core/src/Platform/Vulkan/: VulkanAllocator.cpp  VulkanAllocator.h  VulkanBasicSkybox.cpp  VulkanBasicSkybox.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanFrameBuffer.cpp  VulkanFramebuffer.h  VulkanHDRSkybox.cpp  VulkanHDRSkybox.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRendererAPI.cpp  (+17 more)
QuasarEngine-Editor/: CMakeLists.txt  config.ultconf  imgui.ini  premake5.lua
QuasarEngine-Editor/Assets/Scripts/: player.lua
QuasarEngine-Editor/Assets/Shaders/: basic.frag.gl.glsl  basic.vert.gl.glsl  basic.vert.gl.spv  basic.vert.glsl  basic_skybox.frag.gl.glsl  basic_skybox.frag.glsl  basic_skybox.vert.gl.glsl  basic_skybox.vert.gl.spv  debug.vert.gl.spv  ui.frag.gl.glsl  ui.frag.gl.spv  ui.vert.gl.spv  ui.vert.spv
QuasarEngine-Editor/src/: QuasarEditor.cpp
QuasarEngine-Editor/src/Editor/: Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  EditorCanvas.h  EditorSplitters.h  Export.cpp  Export.h  SceneManager.cpp  SceneObject.cpp  SceneSerializer.cpp  SceneSerializer.h  UndoStack.h
QuasarEngine-Editor/src/Launcher/: Launcher.cpp  Launcher.h  ProjectManager.cpp  ProjectManager.h  RecentProjectsStore.cpp  RecentProjectsStore.h
QuasarEngine-Editor/src/Tools/: Utils.cpp  Utils.h
(+724 files in other folders)
